# embedded

ir_sensor_demo/: CMakeLists.txt  functions.c  functions.h  main.c  motor_control.c  motor_control.h
